Add new localized string to search textfield

--- a/CineApp/CineApp/Support/en.lproj/Localizable.strings
+++ b/CineApp/CineApp/Support/en.lproj/Localizable.strings
@@ -22,3 +22,4 @@
 "movieDirector" = "Director";
 "movieWriter" = "Writer";
 "movieActors" = "Actors";
+"searchPlaceHolder" = "Search movies by title or director";
