--- a/CineApp/CineApp/Support/es.lproj/Localizable.strings
+++ b/CineApp/CineApp/Support/es.lproj/Localizable.strings
@@ -22,3 +22,4 @@
 "movieDirector" = "Dirección";
 "movieWriter" = "Guión";
 "movieActors" = "Reparto";
+"searchPlaceHolder" = "Busca películas por título o director";
